[tool.poetry]
name = "pyfinn"
version = "0.1.0"
description = "Fetch real estate listing from finn.no and make available as JSON"
authors = ["Nikolai R Kristiansen <nikolaik@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

requests-html = "*"
flask = "*"
gunicorn = "*"
redis = "*"
fake-useragent = "*"
urllib3 = "==2.*"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
ruff = "^0.1.0"
pytest-socket = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=120

[tool.pytest.ini_options]
addopts = "--allow-hosts=localhost,127.0.0.1,::1"
