[project]
name = "pyfinn"
version = "0.1.0"
description = "Fetch real estate listing from finn.no and make available as JSON"
authors = [{ name = "Nikolai R Kristiansen", email = "nikolaik@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "beautifulsoup4",
    "fake-useragent",
    "flask",
    "gunicorn",
    "lxml",
    "redis",
    "requests",
]

[dependency-groups]
dev = [
    "pytest-socket",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length=120

[tool.pytest.ini_options]
addopts = "--allow-hosts=localhost,127.0.0.1,::1"
